# eddi-lab

./: .env.example  .envrc  .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  Makefile  README.md  requirements-dev.txt
.claude/: settings.local.json
.llm-orc/: .gitignore  README.md  config.yaml
.llm-orc/ensembles/: architecture_review.yaml  gesture_analysis.yaml  research_validation.yaml
.llm-orc/roles/: dancer.yaml  designer.yaml  device_specialist.yaml  director.yaml  engineer.yaml  researcher.yaml
docs/: legacy-migration.md  project-management.md  research-goals.md  submodule-workflow.md
integration-tests/: __init__.py  conftest.py  pyproject.toml  test_pipeline_basic.py
scripts/: check-repo-failures.sh  enhanced-push.sh  find-active-runs.sh  push-submodule.sh  repo-workflow-status.sh
