[project]
name = "eddi-lab-integration-tests"
version = "0.1.0"
description = "Integration tests for the eddi-lab ecosystem"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.28.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-emoji>=0.2.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]